Fix: seriesControls component scroll area was not overflowing properly. fixed

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -979,10 +979,6 @@ body {
   margin-right: -0.25rem;
 }
 
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
 .ml-6 {
   margin-left: 1.5rem;
 }
@@ -993,6 +989,14 @@ body {
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .flex {
@@ -1039,6 +1043,14 @@ body {
   height: 2.25rem;
 }
 
+.h-\[278px\] {
+  height: 278px;
+}
+
+.h-\[420px\] {
+  height: 420px;
+}
+
 .h-full {
   height: 100%;
 }
@@ -1051,81 +1063,24 @@ body {
   height: 100vh;
 }
 
-.h-\[420px\] {
-  height: 420px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
 .h-\[220px\] {
   height: 220px;
-}
-
-.h-\[120px\] {
-  height: 120px;
 }
 
 .h-\[320px\] {
   height: 320px;
 }
 
-.h-72 {
-  height: 18rem;
+.h-\[472px\] {
+  height: 472px;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-\[262px\] {
-  height: 262px;
-}
-
-.h-\[330px\] {
-  height: 330px;
-}
-
-.h-\[312px\] {
-  height: 312px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[278px\] {
-  height: 278px;
-}
-
-.h-\[178px\] {
-  height: 178px;
+.h-\[572px\] {
+  height: 572px;
 }
 
 .max-h-\[300px\] {
   max-height: 300px;
-}
-
-.max-h-\[420px\] {
-  max-height: 420px;
-}
-
-.max-h-\[302px\] {
-  max-height: 302px;
 }
 
 .min-h-0 {
@@ -1170,10 +1125,6 @@ body {
 
 .w-\[180px\] {
   width: 180px;
-}
-
-.w-\[324px\] {
-  width: 324px;
 }
 
 .w-\[var\(--radix-popover-trigger-width\)\] {
@@ -1234,10 +1185,6 @@ body {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-}
-
-.resize {
-  resize: both;
 }
 
 .grid-cols-\[324px_1fr\] {
@@ -1308,10 +1255,6 @@ body {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
-}
-
-.overflow-auto {
-  overflow: auto;
 }
 
 .overflow-hidden {
@@ -1512,12 +1455,12 @@ body {
   padding-bottom: 1.5rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pl-0 {
   padding-left: 0px;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .pr-8 {
@@ -1528,16 +1471,16 @@ body {
   padding-top: 0px;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pt-2 {
+  padding-top: 0.5rem;
 }
 
 .text-center {
@@ -1639,10 +1582,6 @@ body {
 
 .opacity-70 {
   opacity: 0.7;
-}
-
-.opacity-40 {
-  opacity: 0.4;
 }
 
 .shadow {
